# MayaMCP

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  EMOTION_VERIFICATION.md  FAILING_TESTS.md  LICENSE  MODAL_DEPLOYMENT_GUIDE.md  MODAL_MEMORY_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_ANALYSIS.md  README.md  SECURITY_HARDENING_BYOK.md  SECURITY_HARDENING_STREAMING.md  TODO.md  WARP.md  agents-cli-manifest.yaml  deploy.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_maya.sh  setup.py  simple_security_test.py  test-coverage-gaps.md  test_maya_memvid_full.py  test_memvid.py  test_security_hardening.py  test_speech_acts.py  test_tts_cleaning.py
.kiro/settings/: mcp.json.example
.kiro/steering/: product.md  structure.md  tech.md
.macroscope/: portfolio-review.md
.zencoder/rules/: repo.md
assets/: maya_memory_index.json
docs/: ADR_001_AVATAR_VIDEO_FORMAT.md  EMOTION_SYSTEM.md  MODAL_MEMORY_IMPLEMENTATION_SUMMARY.md  SECURITY_HARDENING_STREAMING.md
monitoring/grafana/: README.md
notebooks/: bartending-agent-maya.ipynb
scripts/: run_weave_evals.py
src/: __init__.py  agent.py  fast_api_app.py  mayamcp_cli.py
src/app_utils/: telemetry.py  typing.py
src/config/: __init__.py  api_keys.py  logging_config.py  model_config.py
src/conversation/: __init__.py  phase_manager.py  processor.py
src/llm/: __init__.py  client.py  key_validator.py  prompts.py  session_registry.py  tools.py
src/media/: animator.py
src/memvid/: __init__.py  config.py  encoder.py  retriever.py  utils.py
src/rag/: __init__.py  (+6 more)
tests/: __init__.py  conftest.py  test_api_keys.py  test_batch_state.py  test_config.py  test_conversation_updates.py  test_embeddings.py  test_errors.py  test_generation.py  test_llm_client.py  test_llm_tools.py  test_logging_config.py  test_logging_sensitivity.py  test_maya.py  test_maya_memvid_full.py  test_memory_monitor_threshold.py  test_memvid.py  test_memvid_config.py  test_memvid_retriever.py  test_memvid_utils.py  test_modal_memory_monitoring.py  test_model_config.py  test_payment_properties.py  test_phase_manager.py  test_processor_rag.py  test_processor_security.py  test_rag_embeddings.py  test_retrieval.py  test_security_config.py  test_security_hardening.py  test_security_scanner.py  test_session_context.py  test_speech_acts.py  test_state_manager.py  test_streaming.py  test_tts.py  test_tts_cleaning.py  test_ui_components.py  test_ui_handlers.py  test_ui_launcher.py  (+1 more)
(+111 files in other folders)
